@@ -1,12 +1,0 @@
-Mac OS X
-* missing libtoolize
-* building multiple architure binaries
-
-
-Missing libtoolize
-Use glibtoolize instead
-
-
-Building multiple architecture binaries
-See: http://code.google.com/p/libcfile/wiki/Building
-
