@@ -1,6 +1,7 @@
 [Project]
 name: "libcfile"
 status: "alpha"
+description: "a library for cross-platform C file functions"
 features: [
     "debug_output",
     "git", "source_package",
@@ -11,12 +12,12 @@ features: [
 url: "https://googledrive.com/host/0B3fBvzttpiiSem41RXpvQkIyZlU/"
 
 [git]
-url: "https://code.google.com/p/libcfile/"
+url: "https://github.com/libyal/libcfile.git"
 
 [cygwin]
 build_dependencies: []
 dll_dependencies: [
-    "*TODO describe dependencies*"]
+    "**TODO describe dependencies**"]
 dll_filename: "cygcfile-0.dll"
 
 [gcc]
@@ -26,7 +27,7 @@ static_build_dependencies: []
 [mingw]
 build_dependencies: []
 dll_dependencies: [
-    "*TODO describe dependencies*"]
+    "**TODO describe dependencies**"]
 dll_filename: "libcfile-1.dll"
 
 [msvscpp]
