@@ -28,7 +28,7 @@ BEGIN
       VALUE "OriginalFilename",		"libcfile.dll\0"
       VALUE "ProductName",		"libcfile\0"
       VALUE "ProductVersion",		"@VERSION@" "\0"
-      VALUE "Comments",			"For more information visit http://code.google.com/p/libcfile/\0"
+      VALUE "Comments",			"For more information visit https://github.com/libyal/libcfile/\0"
     END
   END
   BLOCK "VarFileInfo"
