@@ -27,6 +27,9 @@ Notes:
   multiple of sector size. Any other value will result in error 0x57
   (ERROR_INVALID_PARAMETER).
 
+20140915
+* changes for project site move
+
 20140624
 * updated msvscpp files
 
